# cinepi-raw-fork

./: README.md  meson.build  post-processing.json  run-raw.sh  run-raw2.sh
cinepi/: cinepi_controller.cpp  cinepi_controller.hpp  cinepi_frameinfo.hpp  cinepi_manager.cpp  cinepi_manager.hpp  cinepi_raw.cpp  cinepi_recorder.hpp  cinepi_sound.cpp  cinepi_sound.hpp  cinepi_state.hpp  dng_encoder.cpp  dng_encoder.hpp  lj92.c  meson.build  mjpegPreviewStage.cpp  raw_options.hpp  sharedContextStage.cpp  shared_context_stage.cpp  shared_context_stage.hpp  shared_context_structs.hpp  utils.cpp  utils.hpp
core/: rpicam_app.cpp  rpicam_app.hpp
preview/: preview.cpp
